# final-project-sentinals

./: .gitmodules  .travis.yml  Motor_Driver.ino  Movement_Driver.ino  README.md  Relay_State_Machine.ino  android_script.sh  detect_face.py  pir_sensor.ino  sketch_dec03a.ino  sketch_nov22b.ino
Examples/: Relay_Example.ino  Relay_State_Machine.ino  Sweep_Example.ino  Trigger_State_Machine.ino
Face_RecognitionV1/: .gitignore  README.md  camera_fps.py  cascade.xml  client.py  detect_body.py  detect_face.py  detect_face.py.save  detect_face.py.save.1  detect_obj.py  ed_detect.py  face_test.py  firebase_server.py  motion_detector.py  opt_detect.py  requirements.txt  server.py  test.py  test_body.py  upper_body_det.py
Horizontal_Movement/: Horizontal_Movement.ino  Horizontal_Movement_sensor.ino
Motor_Driver/: Motor_Driver.ino
MyFirstApp/: build.properties  build.xml  my_first_app_build.xml
Tests/: .gitignore  CMakeCache.txt  CMakeLists.txt  GPIO_Test.out  Makefile  Mock_Time.cpp  Mock_Time_Test.out  Movement_Test.cpp  cmake_install.cmake
Tests/Mock_Libraries/: Mock_Functions.cpp  Mock_Functions.h  Mock_Servo.cpp  Mock_Servo.h  Mock_Time.cpp  Mock_Time.h
Tests/Test_Files/: GPIO_Test.cpp  Mock_Time_Test.cpp  Movement_Test.cpp  Servo_Test.cpp  horizontal_test.cpp  horizontal_test_sensor.cpp
client_server_sensor/: client.py  firebase_server.py  server.py
cs178_MyFirstApp/: settings.gradle
object_detection/: README.md
pir_sensor/: pir_sensor.ino
pir_sensor_sm/: pir_sensor_sm.ino
readme_visuals/: IMG_2262.HEIC  IMG_2266.HEIC
socket_programming/: README.md  (+2 more)
(+34 files in other folders)
